# currency_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: build.py  main.py
src/application/: currency.py  dto.py  exeption.py  interfaces.py
src/infrastructure/: config.py  currency_api.py  exception.py
src/presentation/: middleware.py  providers.py  response.py  route.py
tests/: currency_service_test.py  fake.py
